fixed backface-visibility issue for safari and ios

--- a/css/base-mobile.css
+++ b/css/base-mobile.css
@@ -176,6 +176,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   display: flex;
   align-items: center;
